# rpg_monocular_pose_estimator

./: CHANGES.md  README.md
monocular_pose_estimator/: CMakeLists.txt  package.xml
monocular_pose_estimator/cfg/: MonocularPoseEstimator.cfg  eCon_camera.yaml
monocular_pose_estimator/include/monocular_pose_estimator/: monocular_pose_estimator_cvcamera.h  monocular_pose_estimator_usb_cam.h  monocular_pose_estimator_usbcam.h  point_detection_node.hpp  usb_cam.h
monocular_pose_estimator/include/mpe_usb_cam/: usb_cam.h
monocular_pose_estimator/launch/: camera.launch  demo2.launch  nodelet.launch  point_detection_standalone.launch  profile.launch
monocular_pose_estimator/marker_positions/: demo_marker_positions2.yaml  pattern_artificial.yaml  pattern_beta.yaml  pattern_gamma.yaml  pattern_screws.yaml  pattern_small.yaml
monocular_pose_estimator/src/: monocular_pose_estimator.cpp  monocular_pose_estimator_cvcamera.cpp  monocular_pose_estimator_usb_cam.cpp  monocular_pose_estimator_usbcam.cpp  point_detection_node.cpp  usb_cam.cpp
monocular_pose_estimator_lib/: CMakeLists.txt  package.xml
monocular_pose_estimator_lib/include/monocular_pose_estimator_lib/: led_detector.h  pose_estimator.h  visualization.h
monocular_pose_estimator_lib/src/: led_detector.cpp  pose_estimator.cpp  visualization.cpp
simple_image_publisher/: CMakeLists.txt  LICENSE  image_publisher_nodelets.xml  package.xml
simple_image_publisher/config/: default_camera.yaml  head_camera.yaml
simple_image_publisher/include/simple_image_publisher/: image_publisher.h
simple_image_publisher/src/: image_publisher.cpp  image_publisher_nodelet.cpp
