<package format="2">
  <name>monocular_pose_estimator</name>
  <version>2.1.2</version>
  <description>
     monocular_pose_estimator
  </description>
  <maintainer email="faessler@ifi.uzh.ch">Matthias Faessler</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>yaml-cpp</build_export_depend>
  <build_depend>yaml-cpp</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>monocular_pose_estimator_lib</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>monocular_pose_estimator_lib</exec_depend>
  <exec_depend>nodelet</exec_depend>

  <export>
    <nodelet plugin="${prefix}/monocular_pose_estimator_nodelet.xml"/>
  </export>


</package>
