<package format="2">
  <name>monocular_pose_estimator</name>
  <version>2.1.2</version>
  <description>
     monocular_pose_estimator
  </description>
  <maintainer email="faessler@ifi.uzh.ch">Matthias Faessler</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>yaml-cpp</build_depend>
  <build_export_depend>yaml-cpp</build_export_depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>monocular_pose_estimator_lib</depend>
  <depend>nodelet</depend>
  <depend>camera_calibration_parsers</depend>

  <exec_depend>v4l-utils</exec_depend>

  <export>
    <nodelet plugin="${prefix}/monocular_pose_estimator_nodelet.xml"/>
  </export>


</package>
