<package format="2">
  <name>monocular_pose_estimator_lib</name>
  <version>2.1.2</version>
  <description>
     monocular_pose_estimator_lib
  </description>
  <maintainer email="faessler@ifi.uzh.ch">Matthias Faessler</maintainer>
  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <build_depend>opencv</build_depend>
  <build_export_depend>opencv</build_export_depend>

  <depend>roscpp</depend>
</package>
